--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
 
@@ -14,14 +16,9 @@ And, for the designers, we offer a free PSD Download. It provides a faster, easi
     <link rel="shortcut icon" href="favicon_16.ico" />
     <link rel="bookmark" href="favicon_16.ico" />
     <!-- site css -->
-    <link rel="stylesheet" href="css/site.min.css">
+    <link rel="stylesheet" href="{% static 'css/site.min.css' %}">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800,700,400italic,600italic,700italic,800italic,300italic" rel="stylesheet" type="text/css">
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
-    <!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<script src="js/respond.min.js"></script>
-<![endif]-->
-    <script type="text/javascript" src="js/site.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/site.min.js' %}"></script>
 </head>
 
 <body>
