--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,7 +10,7 @@
             <div class="col-md-offset-3 col-md-6">
                 <form method='post' action="">
                     {% csrf_token %}
-                    <h2><p class="text-center">Disputes, resolved. Simple, Fast.</p></h2>
+                    <h2><p class="text-center">Disputes, resolved. Simple, fast, online.</p></h2>
                     <input type="email" id="id_email" name="email" class="form-control" placeholder="Email"><br/>
                     <button type="submit" id="signup_button" class="btn btn-lg btn-info btn-block">Sign up now!</button>
                 </form>
