--- a/templates/head.html
+++ b/templates/head.html
@@ -13,7 +13,8 @@ And, for the designers, we offer a free PSD Download. It provides a faster, easi
     <link rel="shortcut icon" href="favicon_16.ico" />
     <link rel="bookmark" href="favicon_16.ico" />
     <!-- site css -->
-    <link rel="stylesheet" href="{% static 'css/site.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/site.min.css' %}">    
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800,700,400italic,600italic,700italic,800italic,300italic" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="{% static 'js/site.min.js' %}"></script>
+    <script src="http://malsup.github.com/jquery.form.js"></script> 
 </head>
