--- a/templates/banner.html
+++ b/templates/banner.html
@@ -2,8 +2,8 @@
 <div style="padding: 10px 0 10px" class="topic">
     <div class="container">
         <div class="col-md-8">
-            <h3>DisputeHub</h3>
-            <h4>Disputes. Resolve. Simple. Fast. Trustable.</h4> 
+            <h3>Outlaw Resolutions</h3>
+            <h4>Disputes. Resolved. Simple. Fast. Online.</h4>
         </div>
     </div>
 </div>
