--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% load staticfiles %} {% include "head.html" %}
 
 <body>
-    {% include "headers.html" with banner_request=True %}
+    {% include "navbar.html" with banner_request=True %}
 
     <div class="container">
         <hr/>
