--- a/templates/index.html
+++ b/templates/index.html
@@ -3,113 +3,54 @@
 {% load staticfiles %} {% include "head.html" %}
 
 <body>
-    {% include "headers.html" with banner_request=True %}
+{% include "navbar.html" with banner_request=True %}
 
-    <div class="container">
-        <hr/>
-        <div class="row">
-            <div class="col-md-offset-2 col-md-8">
-                <h2><p class="text-center">Resolve a dispute now</p></h2>
-                <input type="text" class="form-control" placeholder="Dispute Title"><br/>
-                <input type="text" class="form-control" placeholder="Your Email"><br/>
-                <button type="button" class="btn btn-lg btn-info btn-block">Submit</button>
-            </div>
-        </div>        
-        <hr/>
-        <div class="example">
-            <h2><p class="text-center">How does it work?</p></h2>
-            <div class="row">
-                <div class="col-md-offset-2 col-md-8">
-                    <div class="timeline">
-                        <dl>
-                            <dt>Start</dt>
-                            <dd class="pos-right clearfix">
-                                <div class="circ"></div>
-                                <div class="time">Day 1, 10:00</div>
-                                <div class="events">
-                                    <div class="pull-left">
-                                        <img class="events-object img-rounded" src="{% static 'img/photo-1.jpg' %}">
-                                    </div>
-                                    <div class="events-body">
-                                        <h4 class="events-heading">Jimmy</h4>
-                                        <p>Jimmy opens up a dispute and send unique link to Timmy. Jimmy also adds in his relevant information and facts</p>
-                                    </div>
-                                </div>
-                            </dd>
-                            <dd class="pos-left clearfix">
-                                <div class="circ"></div>
-                                <div class="time">Day 1, 10:05</div>
-                                <div class="events">
-                                    <div class="pull-left">
-                                        <img class="events-object img-rounded" src="{% static 'img/photo-2.jpg' %}">
-                                    </div>
-                                    <div class="events-body">
-                                        <h4 class="events-heading">Timmy</h4>
-                                        <p>Timmy accepts link, add his facts, dispute is then sent to some guy.</p>
-                                    </div>
-                                </div>
-                            </dd>
-                            <dd class="pos-right clearfix">
-                                <div class="circ"></div>
-                                <div class="time">Day 1, 10:10</div>
-                                <div class="events">
-                                    <div class="pull-left">
-                                        <img class="events-object img-rounded" src="{% static 'img/photo-3.jpg' %}">
-                                    </div>
-                                    <div class="events-body">
-                                        <h4 class="events-heading">Some guy</h4>
-                                        <p>Some guy is allocated to the dispute and looks throws both parties, use fairy dust to make a contract. Sends it to another guy</p>
-                                    </div>
-                                </div>
-                            </dd>
-                            <dt>Contract formed</dt>
-                            <dd class="pos-left clearfix">
-                                <div class="circ"></div>
-                                <div class="time">Day 1, 13:30</div>
-                                <div class="events">
-                                    <div class="pull-left">
-                                        <img class="events-object img-rounded" src="{% static 'img/photo-4.jpg' %}">
-                                    </div>
-                                    <div class="events-body">
-                                        <h4 class="events-heading">Another guy</h4>
-                                        <p>Another guy looks at the contract and signs it. Both part are not legally bound to it.</p>
-                                    </div>
-                                </div>
-                            </dd>
-                            <dt>End</dt>
-                        </dl>
-                    </div>
-                </div>
-            </div>
+<div class="container">
+    <hr/>
+    <div class="row">
+        <div class="col-md-offset-2 col-md-8">
+            <h2><p class="text-center">Resolve a dispute now</p></h2>
+            <input type="text" class="form-control" placeholder="Your Email"><br/>
+            <button type="button" class="btn btn-lg btn-info btn-block">Start resolving</button>
         </div>
-        <hr/>
-                
-
-        <div class="example">
-            <h2><p class="text-center">Who uses DisputeHub?</p></h2><br/><br/>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <p><img src="{% static 'img/photo-1.jpg' %}"/></p>
-                    <p><strong>Individuals</strong></p>
-                    Use DisputeHub to dispute a personal issue, whether you want to experiment with disputing or you really had an arguement with a friend.
-                </div>
-                <div class="col-md-4">
-                    <p><img src="{% static 'img/photo-2.jpg' %}"/></p>
-                    <p><strong>Communities</strong></p>
-                    DisputeHub hosts one of the largest collections of disputers in the world. Create, browse, resolve disputes
-                </div>
-                <div class="col-md-4">
-                    <p><img src="{% static 'img/photo-3.jpg' %}"/></p>
-                    <p><strong>Businesses</strong></p>
-                    Businesses of all sizes use GitHub to support their development process and dealing with shiity customers
-                </div>
-            </div>
-        </div>
-        <hr/>
     </div>
+    <hr/>
+</div>
+
+{% include "timeline.html" %}
+
+<div class="container">
+    <div class="example">
+        <h2><p class="text-center">Who uses Outlaw Resolutions?</p></h2>
+        <br/><br/>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <p><img width=50 height=50 src="http://image.flaticon.com/icons/svg/43/43368.svg"/></p>
+                <p><strong>Individuals</strong></p>
+                Use Outlaw Resolutions to dispute a personal issue, whether you want to experiment with disputing or you
+                really
+                had an arguement with a friend.
+            </div>
+            <div class="col-md-4">
+                <p><img width=50 height=50 src="http://image.flaticon.com/icons/svg/32/32441.svg"/></p>
+                <p><strong>Communities</strong></p>
+                Outlaw Resolutions hosts one of the largest collections of disputers in the world. Create, browse,
+                resolve
+                disputes
+            </div>
+            <div class="col-md-4">
+                <p><img width=50 height=50 src="http://image.flaticon.com/icons/svg/75/75722.svg"/></p>
+                <p><strong>Businesses</strong></p>
+                Businesses of all sizes use GitHub to support their development process and dealing with shiity
+                customers
+            </div>
+        </div>
+    </div>
+    <hr/>
+</div>
 
 
-    {% include "footer.html" %}
+{% include "footer.html" %}
 </body>
 
 </html>
