--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,8 +4,8 @@
 
 <body>
 <div class="container">
-    <hr/>
     <div class="example">
+        <hr/>
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
                 <form id="landing_form">
@@ -15,115 +15,17 @@
                     <div id="landing_response" class="collapse"></div>
                     <button id="signup_button" class="btn btn-lg btn-info btn-block">Sign up now!</button>
                 </form>
-                </div>
             </div>
         </div>
     </div>
-
     <hr/>
-
-    <div class="example">
-        <h2><p class="text-center">How does it work?</p></h2>
-        <div class="row">
-            <div class="col-md-offset-2 col-md-8">
-                <div class="timeline">
-                    <dl>
-                        <dt>Start</dt>
-                        <dd class="pos-right clearfix">
-                            <div class="circ"></div>
-                            <div class="time">Day 1, 10:00</div>
-                            <div class="events">
-                                <div class="pull-left">
-                                    <img width=50 class="events-object img-rounded"
-                                         src="http://vignette4.wikia.nocookie.net/southpark/images/2/24/Jimmy_h-h-here.png/revision/latest?cb=20140821232918">
-                                </div>
-                                <div class="events-body">
-                                    <h4 class="events-heading">Jimmy</h4>
-                                    <p>Jimmy opens up a dispute ticket while providing supporting documents. Jimmy
-                                        reffers his dispute ticket via a link to Timmy.</p>
-                                </div>
-                            </div>
-                        </dd>
-                        <dd class="pos-left clearfix">
-                            <div class="circ"></div>
-                            <div class="time">Day 1, 10:05</div>
-                            <div class="events">
-                                <div class="pull-left">
-                                    <img width=50 class="events-object img-rounded"
-                                         src="http://vignette1.wikia.nocookie.net/southpark/images/4/4b/Timmy.png/revision/latest?cb=20140829152731">
-                                </div>
-                                <div class="events-body">
-                                    <h4 class="events-heading">Timmy</h4>
-                                    <p>Timmy accepts Jimmy's dispute ticket link, and provides his supporting
-                                        documents.</p>
-                                </div>
-                            </div>
-                        </dd>
-                        <dd class="pos-right clearfix">
-                            <div class="circ"></div>
-                            <div class="time">Day 1, 10:10 - 13:00</div>
-                            <div class="events">
-                                <div class="pull-left">
-                                    <img class="events-object img-rounded" width=50
-                                         src="http://images.tvfanatic.com/iu/s--b21eUmUJ--/t_full/f_auto,fl_lossy,q_75/v1371142120/mr-mackey-picture.png">
-                                </div>
-                                <div class="events-body">
-                                    <h4 class="events-heading">Legal profession</h4>
-                                    <p>The dispute ticket is finalized and assigned to a legal profession to propose a
-                                        contractually binding resolution. </p>
-                                </div>
-                            </div>
-                        </dd>
-                        <dd class="pos-left clearfix">
-                            <div class="circ"></div>
-                            <div class="time">Day 1, 13:30</div>
-                            <div class="events">
-                                <div class="events-body">
-                                    <h4 class="events-heading">Resolved!!</h4>
-                                    <p>A fair and just resolution is sent to both disputing parties and the dispute is
-                                        resolved.</p>
-                                </div>
-                            </div>
-                        </dd>
-                        <dt>End</dt>
-                    </dl>
-                </div>
-            </div>
-        </div>
-        <hr/>
-    </div>
+</div>
 </div>
 
-<script>
-    $(document).ready(function () {
-        $("#landing_form").submit(function (event) {
-            event.preventDefault();
+{% include "timeline.html" %}
 
-            var data = $('#landing_form').serialize();
+<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 
-            $.ajax({
-                url: '',
-                type: 'post',
-                data: data,
-                success: function (data) {
-                    var my_var_string = "<strong>";
-
-                    if (data['success'] == true){
-                        my_var_string += "<span style='color: #37BC9B'>"
-                    }
-                    else{
-                        my_var_string += "<span style='color: #ED5565'>"
-                    }
-
-                    my_var_string += "<p class='text-center'>" + data["message"] + "</p></span></strong>";
-
-                    $("#landing_response").html(my_var_string);
-                    $("#landing_response").collapse("show");
-                }
-            });
-        });
-    })
-</script>
 {% include 'tracking.html' %}
 </body>
 
