--- a/templates/resolve.html
+++ b/templates/resolve.html
@@ -4,7 +4,7 @@
 
 <body>
     <!-- Header -->
-    {% include "headers.html" %}
+    {% include "navbar.html" %}
 
     <!-- Forum Tabs -->
     <div class="container documents">
