--- a/templates/headers.html
+++ b/templates/headers.html
@@ -17,8 +17,12 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Sign Up</a></li>
-                    <li><a href="#">Login</a></li>
+                    {% if user %}
+                        <li><a href="#">{{ user.email }}</a></li>
+                    {% else %}
+                        <li><a href="#">Sign Up</a></li>
+                        <li><a href="#">Login</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
