--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,7 @@
     <div class="row">
         <div class="col-md-offset-2 col-md-8">
             <h2><p class="text-center">Resolve a dispute now</p></h2>
-            <input type="text" class="form-control" placeholder="Your Email"><br/>
-            <button type="button" class="btn btn-lg btn-info btn-block">Start resolving</button>
+            <a href="{% url 'dispute_view' %}"><button type="button" class="btn btn-lg btn-info btn-block">Take me there!</button></a>
         </div>
     </div>
     <hr/>
