--- a/templates/dispute.html
+++ b/templates/dispute.html
@@ -57,7 +57,7 @@
 
                 </div>
 
-                <button type="button" class="btn btn-block">Next</button>
+                <button id="next_button" type="button" class="btn btn-block">Next</button>
 
                 <div id="dispute_page_two" class="well hidden">
                     <p><span class="btn btn-block btn-default btn-file">Browse<input type="file"></span></p>
@@ -68,6 +68,36 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Generating your unique link... </h4>
+                </div>
+                <div class="modal-body">
+                    <div id="pre_unique_link_div" class="collapse">
+                        <div class="loader"></div>
+                    </div>
+
+                    <div id="unique_link_div" class="collapse">
+                        <input type="text" class="form-control"
+                               value="/path/to/foo/bar" placeholder="Some path" id="copy-input">
+                        <span class="input-group-btn"><button class="btn btn-default" type="button" id="copy-button"
+                                                              data-toggle="tooltip" data-placement="button"
+                                                              title="Copy to Clipboard">Copy</button></span>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </div>
 
 <div class="container">
@@ -79,7 +109,13 @@
 <script>
 
     $(document).ready(function () {
-        $("#category_form").submit(function (event) {
+        $('#copy-button').tooltip();
+        $('#pre_unique_link_div').collapse('show');
+
+        $("#next_button").click(function () {
+            $('#myModal').modal('show');
+
+
             event.preventDefault();
 
             var data = $("#category_form").serialize();
@@ -95,6 +131,23 @@
 
         });
     })
+
+    $('#copy-button').bind('click', function () {
+        var input = document.querySelector('#copy-input');
+        input.setSelectionRange(0, input.value.length + 1);
+        try {
+            var success = document.execCommand('copy');
+            if (success) {
+                // Change tooltip message to "Copied!"
+            } else {
+                // Handle error. Perhaps change tooltip message to tell user to use Ctrl-c
+                // instead.
+            }
+        } catch (err) {
+            // Handle error. Perhaps change tooltip message to tell user to use Ctrl-c
+            // instead.
+        }
+    });
 
 
     $("#category_selector").change(function () {
