timeline typo fix

--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -45,7 +45,7 @@
                                          src="http://images.tvfanatic.com/iu/s--b21eUmUJ--/t_full/f_auto,fl_lossy,q_75/v1371142120/mr-mackey-picture.png">
                                 </div>
                                 <div class="events-body">
-                                    <h4 class="events-heading">Legal profession</h4>
+                                    <h4 class="events-heading">Legal professional</h4>
                                     <p>The dispute ticket is finalized and assigned to a legal profession to propose a
                                         contractually binding resolution. </p>
                                 </div>
