--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,9 @@
     <div class="row">
         <div class="col-md-offset-2 col-md-8">
             <h2><p class="text-center">Resolve a dispute now</p></h2>
-            <a href="{% url 'dispute_view' %}"><button type="button" class="btn btn-lg btn-info btn-block">Take me there!</button></a>
+            <a href="{% url 'create_dispute_view' %}">
+                <button type="button" class="btn btn-lg btn-info btn-block">Take me there!</button>
+            </a>
         </div>
     </div>
     <hr/>
