--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container">
-        <p class="text-muted">&copy; Outlaw Resolutions 2016 | Created by TopKek solutions</p>
+        <p class="text-muted">&copy; Outlaw Resolutions 2016 | Created by TopKek Solutions</p>
     </div>
 </footer>
