--- a/templates/head.html
+++ b/templates/head.html
@@ -6,15 +6,18 @@
     <!-- Sets initial viewport load and disables zooming  -->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- SmartAddon.com Verification -->
-    <meta name="smartaddon-verification" content="936e8d43184bc47ef34e25e426c508fe" />
-    <meta name="keywords" content="Flat UI Design, UI design, UI, user interface, web interface design, user interface design, Flat web design, Bootstrap, Bootflat, Flat UI colors, colors">
+    <meta name="smartaddon-verification" content="936e8d43184bc47ef34e25e426c508fe"/>
+    <meta name="keywords"
+          content="Flat UI Design, UI design, UI, user interface, web interface design, user interface design, Flat web design, Bootstrap, Bootflat, Flat UI colors, colors">
     <meta name="description" content="BOOTFLAT is an open source Flat UI KIT based on Bootstrap CSS framework.
 And, for the designers, we offer a free PSD Download. It provides a faster, easier and less repetitive way for web developers or designers to create elegant web apps.">
-    <link rel="shortcut icon" href="favicon_16.ico" />
-    <link rel="bookmark" href="favicon_16.ico" />
+    <link rel="shortcut icon" href="favicon_16.ico"/>
+    <link rel="bookmark" href="favicon_16.ico"/>
     <!-- site css -->
-    <link rel="stylesheet" href="{% static 'css/site.min.css' %}">    
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800,700,400italic,600italic,700italic,800italic,300italic" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/site.min.css' %}">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800,700,400italic,600italic,700italic,800italic,300italic"
+          rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <script type="text/javascript" src="{% static 'js/site.min.js' %}"></script>
-    <script src="http://malsup.github.com/jquery.form.js"></script> 
+    <script src="http://malsup.github.com/jquery.form.js"></script>
 </head>
