--- a/templates/resolve.html
+++ b/templates/resolve.html
@@ -14,13 +14,13 @@
                 <div class="col-md-12">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne"><h3>dispute title here??</h3></a>
+                            <a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne"><h3>Case number TVJ_2016</h3></a>
                         </h4>
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse in">
                         <div class="panel-body">
                             <p class="lead">
-                                more information here
+                                timmy vs jimmy
                             </p>
                         </div>
                     </div>
@@ -35,7 +35,7 @@
             <div class="col-md-6" style="padding-right:20px; border-right: 1px solid #ccc;">
                 <p class="text-center"><strong>Timmy</strong></p><br/>
                 <p>Timmy arguements...</p>
-                <p>He was a cunt</p>
+                <p>List of files</p>
             </div>
 
             <div class="col-md-6">
