--- a/templates/dispute2.html
+++ b/templates/dispute2.html
@@ -3,52 +3,117 @@
 {% load staticfiles %} {% include "head.html" %}
 
 <body>
-    <!-- Header -->
-    {% include "navbar.html" %}
+<!-- Header -->
+{% include "navbar.html" %}
 
-    <!-- Body -->
+<!-- Body -->
 
-    <!-- person 2 dispute -->
-    <div class="container documents">
-        <div class="example">
-            <hr/>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="panel-body">
-                        <p class="lead">
-                            Please submit relevant information for your dispute between you and Timmy
-                        </p>
-                    </div>
+<!-- person 2 dispute -->
+<div class="container documents">
+    <div class="example">
+        <hr/>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel-body">
+                    <p class="lead">
+                        Please submit relevant information for your dispute between you and Timmy
+                    </p>
                 </div>
             </div>
-            <hr/>
+        </div>
+        <hr/>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row-fluid">
+        <div class="col-md-6" style="padding-right:20px; border-right: 1px solid #ccc;">
+            {% csrf_token %}
+            <p class="text-center"><strong>Jimmy, please submit your documents</strong></p><br/>
+            <p><span class="btn btn-block btn-default btn-file">Browse<input type="file"></span></p>
+            <p><textarea placeholder="Extra info" class="form-control" rows="2"></textarea></p>
+            <button id="next_button" type="button" class="btn btn-block">Submit</button>
+        </div>
+
+        <div class="col-md-6">
+            <p class="text-center"><strong>Timmy</strong></p>
+            <p class="text-center">Timmy has submitted his documents<span class="glyphicon glyphicon-ok"></span></p>
         </div>
     </div>
+</div>
 
-    <div class="container">
-        <div class="row-fluid">
-            <div class="col-md-6" style="padding-right:20px; border-right: 1px solid #ccc;">
-                <p class="text-center"><strong>Jimmy, please submit your documents</strong></p><br/>
-                <span class="btn btn-block btn-default btn-file">Browse<input type="file"></span></p>
-                <p><textarea placeholder="Extra info" class="form-control" rows="2"></textarea></p>
-                <button type="button" class="btn btn-block">Submit</button>
+<div class="container">
+    <div class="row">
+        <hr/>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Generating your unique link... </h4>
             </div>
+            <div class="modal-body">
+                <div id="pre_unique_link_div" class="collapse">
+                    <div class="loader"></div>
+                </div>
 
-            <div class="col-md-6">
-                <p class="text-center"><strong>Timmy</strong></p>
-                <p class="text-center">Timmy has submitted his documents<span class="glyphicon glyphicon-ok"></span></p>                
+                <div id="unique_link_div" class="collapse">
+                    <input type="text" class="form-control"
+                           value="/path/to/foo/bar" placeholder="Some path" id="copy-input">
+                    <span class="input-group-btn"><button class="btn btn-default" type="button" id="copy-button"
+                                                          data-toggle="tooltip" data-placement="button"
+                                                          title="Copy to Clipboard">Copy</button></span>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
-    </div>
 
-    <div class="container">
-        <div class="row">
-            <hr/>
-        </div>
     </div>
+</div>
 
-    <!-- Footer -->
-    {% include "footer.html" %}
+<!-- Footer -->
+{% include "footer.html" %}
+
+<script>
+    $("#next_button").click(function () {
+        $('#myModal').modal({
+            show: 'false'
+        });
+
+        $("#pre_unique_link_div").collapse('hide');
+        $("#unique_link_div").collapse('show');
+    })
+
+    $('#copy-button').bind('click', function () {
+        var input = document.querySelector('#copy-input');
+        input.setSelectionRange(0, input.value.length + 1);
+        try {
+            var success = document.execCommand('copy');
+            if (success) {
+                // Change tooltip message to "Copied!"
+            } else {
+                // Handle error. Perhaps change tooltip message to tell user to use Ctrl-c
+                // instead.
+            }
+        } catch (err) {
+            // Handle error. Perhaps change tooltip message to tell user to use Ctrl-c
+            // instead.
+        }
+    });
+
+    $(document).ready(function () {
+        $('#copy-button').tooltip();
+        $('#pre_unique_link_div').collapse('show');
+    })
+</script>
 </body>
 
 
