--- a/templates/head.html
+++ b/templates/head.html
@@ -8,9 +8,8 @@
     <!-- SmartAddon.com Verification -->
     <meta name="smartaddon-verification" content="936e8d43184bc47ef34e25e426c508fe"/>
     <meta name="keywords"
-          content="Flat UI Design, UI design, UI, user interface, web interface design, user interface design, Flat web design, Bootstrap, Bootflat, Flat UI colors, colors">
-    <meta name="description" content="BOOTFLAT is an open source Flat UI KIT based on Bootstrap CSS framework.
-And, for the designers, we offer a free PSD Download. It provides a faster, easier and less repetitive way for web developers or designers to create elegant web apps.">
+          content="Outlaw Resolutions is your top kek solutions to resolving disputes online">
+    <meta name="description" content="Outlaw Resolutions is your top kek solutions to resolving disputes online">
     <link rel="shortcut icon" href="favicon_16.ico"/>
     <link rel="bookmark" href="favicon_16.ico"/>
     <!-- site css -->
