--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -46,7 +46,7 @@
                                 </div>
                                 <div class="events-body">
                                     <h4 class="events-heading">Legal professional</h4>
-                                    <p>The dispute ticket is finalized and assigned to a legal profession to propose a
+                                    <p>The dispute ticket is finalized and assigned to a legal professional to propose a
                                         contractually binding resolution. </p>
                                 </div>
                             </div>
