--- a/templates/create_dispute.html
+++ b/templates/create_dispute.html
@@ -16,7 +16,7 @@
             <div class="col-md-12">
                 <div class="panel-body">
                     <p class="lead">
-                        Please submit relevant information for your dispute, Timmy
+                        Please submit relevant information for your dispute
                     </p>
                 </div>
             </div>
