--- a/templates/dispute2.html
+++ b/templates/dispute2.html
@@ -70,7 +70,7 @@
 
                 <div id="unique_link_div" class="collapse">
                     <input type="text" class="form-control"
-                           value="/path/to/foo/bar" placeholder="Some path" id="copy-input">
+                           value="/dispute/44214" placeholder="Some path" id="copy-input">
                     <span class="input-group-btn"><button class="btn btn-default" type="button" id="copy-button"
                                                           data-toggle="tooltip" data-placement="button"
                                                           title="Copy to Clipboard">Copy</button></span>
@@ -90,7 +90,7 @@
 <script>
     $("#next_button").click(function () {
         $('#myModal').modal({
-            show: 'false'
+            show: 'true'
         });
 
         $("#pre_unique_link_div").collapse('hide');
