--- a/templates/resolve.html
+++ b/templates/resolve.html
@@ -34,14 +34,14 @@
         <div class="row-fluid">
             <div class="col-md-6" style="padding-right:20px; border-right: 1px solid #ccc;">
                 <p class="text-center"><strong>Timmy</strong></p><br/>
-                <p>Timmy arguements...</p>
-                <p>List of files</p>
+                <p>Timmy files...</p>
+                <a href="#">my_case_011.zip...</a>
             </div>
 
             <div class="col-md-6">
                 <p class="text-center"><strong>Jimmy</strong></p><br/>
-                <p>Timmy arguements...</p>
-                <p>He was a cheap cunt</p>
+                <p>Timmy files...</p>
+                <a href="#">case_011.zip...</a>
             </div>
         </div>
     </div>
