--- a/templates/dispute2.html
+++ b/templates/dispute2.html
@@ -40,8 +40,8 @@
                 <p class="text-center"><strong>Timmy</strong></p>
                 <p class="text-center">Timmy has submitted his documents<span class="glyphicon glyphicon-ok"></span></p>
             {%  else %}
-                <p class="text-center"><strong>Disputer</strong></p>
-                <p class="text-center">The other person has yet to submit anything...</p>
+                <p class="text-center"><strong>Other Dispute Party</strong></p>
+                <p class="text-center">You will receive a link to forward to the other party.</p>
             {% endif %}
         </div>
     </div>
