--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
                         class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
                         class="icon-bar"></span> <span class="icon-bar"></span></button>
                 <a class="navbar-brand" href="{% url 'index_view' %}"><img
-                        src="http://image.flaticon.com/icons/svg/66/66236.svg" height="40"></a>
+                        src="{% static 'img/logo.png' %}" height="40"></a>
             </div>
             <div class="collapse navbar-collapse">
                 {#                <ul class="nav navbar-nav navbar-left">#}
