--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,9 @@
             <a href="{% url 'create_dispute_view' %}">
                 <button type="button" class="btn btn-lg btn-info btn-block">Take me there!</button>
             </a>
+            <p class="join-us-now text-center">
+                <a href="{% url 'landing_view' %}">Check out landing page</a>
+            </p>
         </div>
     </div>
     <hr/>
