--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,17 +5,45 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+    <h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+    </p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+        {% endif %}
+        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+    </form>
 
+{% endblock %}
+
+{% block body %}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-md-offset-4">
+                <h1 class="text-center login-title">Sign up with Outlaw Resolutions.</h1>
+                <div class="account-wall">
+                    <img class="profile-img"
+                         src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
+                         alt="">
+                    <form id="signup_form" class="signup form-signin" method="POST" action="{% url 'account_signup' %}">
+                        {% csrf_token %}
+                        <input id="id_email" type="email" class="form-control" name="email" placeholder="Email" required
+                               autofocus>
+                        <input id="id_password1" name="password1" type="password" class="form-control"
+                               placeholder="Password" required>
+                        <input id="id_confirmation_key" maxlength="40" name="confirmation_key" type="hidden">
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">
+                            Sign up
+                        </button>
+                    </form>
+                </div>
+                <a href="{% url 'account_login' %}" class="text-center new-account">Sign in Now</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
