added contact info and disclaimer

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,12 @@
             </p>
         </div>
     </div>
+    <div class="row">
+        <p class="text-center">
+            Disclaimer: the site is demo only, for more info, contact developers at:
+            tony or kendrick @irecruit.com.au</p>
+        </p>
+    </div>
     <hr/>
 </div>
 
